--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 .*.lb
 
 ## Intermediate documents:
-*.dvi
+# *.dvi  # I like the dvi!
 *.xdv
 *-converted-to.*
 # these rules might exclude image files for figures etc.
